Place targets into a scroll area